# ArknightsHelper

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/duzhaokun123/arknightshelper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/duzhaokun123/arknightshelper/: Application.kt
app/src/main/res/layout/: activity_file_markdown.xml  activity_main.xml  overlay_operation_loop.xml  overlay_test.xml  overlay_test2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/duzhaokun123/arknightshelper/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
logtextview/: build.gradle
logtextview/src/androidTest/java/com/duzhaokun123/logtextview/: ExampleInstrumentedTest.kt
logtextview/src/main/: AndroidManifest.xml
logtextview/src/main/java/com/duzhaokun123/logtextview/: LogTextView.kt
logtextview/src/test/java/com/duzhaokun123/logtextview/: ExampleUnitTest.kt
overlayindow/: build.gradle
overlayindow/src/main/: AndroidManifest.xml
overlaywindow/: README.md  build.gradle
overlaywindow/src/androidTest/java/com/duzhaokun123/overlaywindow/: ExampleInstrumentedTest.kt
overlaywindow/src/main/java/com/duzhaokun123/overlaywindow/: OverlayService.kt  OverlayWindow.kt
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/cpp/: CMakeLists.txt  utils.cpp
(+46 files in other folders)
